@@ -14,29 +14,13 @@ function session_api_settings_form() {
   // Find modules that implement hook_session_api_cleanup().
   $modules = module_implements('session_api_cleanup');
 
-  $form['maintenance'] = array(
-    '#type' => 'fieldset',
-    '#title' => t('Maintenance Tasks'),
-    '#description' => t('The following modules have jobs that are run on cron to cleanup expired session information.'),
-    '#collapsible' => TRUE,
-    '#collapsed' => FALSE,
+  // Cookie expiry.
+  $form['session_api_cookie_expire_time'] = array(
+    '#type' => 'textfield',
+    '#title' => t('Cookie expire time'),
+    '#description' => t("The <strong>Session API</strong> module sets an additional cookie in the end users' browsers in order to better track sessions across logins and logouts. This is the amount of time, in seconds, that the cookie will stay valid in a user's browser."),
+    '#default_value' => variable_get('session_api_cookie_expire_time', 2592000),
   );
-
-  // Throw Session API to the top.
-  array_unshift($modules, 'session_api');
-  $modules = array_unique($modules);
-
-  foreach ($modules as $module) {
-    // Gather module-specific information about the cleanup process each on
-    // implements.
-    $info = module_invoke($module, 'session_api_cleanup', 'info');
-    $form['maintenance']['session_api_run_cron_' . $module] = array(
-      '#title' => $info['title'],
-      '#description' => $info['description'],
-      '#type' => 'checkbox',
-      '#default_value' => variable_get('session_api_run_cron_' . $module, FALSE),
-    );
-  }
 
   return system_settings_form($form);
 }
