@@ -2,5 +2,9 @@
 
 DRUPAL-6--1-2, XXXX-XX-XX
 -------------------------
+- A cookie is now set to track the session ID between log in and log
+  out.
+
 - #380510 - Comment style now conforms to Drupal coding standards.
+
 - #380550 - Implements a better cleanup hook system.
